--- a/homework/hw1/hw1_5/hw1_5.html
+++ b/homework/hw1/hw1_5/hw1_5.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="hw1_5.css">
 </head>
 <body>
-<h>Актори фільму "Бетмен" 1989 року</h>
+<h1>Актори фільму "Бетмен" 1989 року</h1>
 <p>Майкл Кітон — Брюс Вейн / Бетмен</p>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8P45zhHYiAHeyTT0qeNH2OswA-70X2KqAJ2-b7To2sH6AW4Hi23n__u6b6ZI9SoEXTt9O7Q10yB-DS2m3OHW0NsJ1r3ua4CNv_kRUwxyOEw&s=10" alt="">
 <p>Джек Ніколсон — Джокер</p>
