--- a/homework/hw1/hw1_3/hw1_3.html
+++ b/homework/hw1/hw1_3/hw1_3.html
@@ -10,7 +10,7 @@
             margin-top: 65px;
             background-color: rgba(247, 240, 237, 0.9);
             width: 60%;
-            font-size: 20px;
+            font-size: 24px;
             padding: 20px;
         }
         h1{
@@ -18,6 +18,8 @@
             margin-top: 65px;
             background-color: rgba(247, 240, 237, 0.9);
             padding: 20px;
+            width: 60%;
+            font-size: 35px;
         }
         body{
             background-image: url('https://images.unsplash.com/photo-1502691876148-a84978e59af8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80');
