--- a/homework/hw1/hw1_5/hw1_5.html
+++ b/homework/hw1/hw1_5/hw1_5.html
@@ -8,20 +8,20 @@
 <body>
 <h1>Актори фільму "Бетмен" 1989 року</h1>
 <p>Майкл Кітон — Брюс Вейн / Бетмен</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8P45zhHYiAHeyTT0qeNH2OswA-70X2KqAJ2-b7To2sH6AW4Hi23n__u6b6ZI9SoEXTt9O7Q10yB-DS2m3OHW0NsJ1r3ua4CNv_kRUwxyOEw&s=10" alt="">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8P45zhHYiAHeyTT0qeNH2OswA-70X2KqAJ2-b7To2sH6AW4Hi23n__u6b6ZI9SoEXTt9O7Q10yB-DS2m3OHW0NsJ1r3ua4CNv_kRUwxyOEw&s=10" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8P45zhHYiAHeyTT0qeNH2OswA-70X2KqAJ2-b7To2sH6AW4Hi23n__u6b6ZI9SoEXTt9O7Q10yB-DS2m3OHW0NsJ1r3ua4CNv_kRUwxyOEw&s=10">
 <p>Джек Ніколсон — Джокер</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsx0tH3QJuFPzN6eOOa9qYzbpvUuS8hnKOGg&s" alt="">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsx0tH3QJuFPzN6eOOa9qYzbpvUuS8hnKOGg&s" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsx0tH3QJuFPzN6eOOa9qYzbpvUuS8hnKOGg&s">
 <p>Кім Бейсінгер — Вікі Вейл</p>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOWFNhfEXV1Lfnc2V19nBPsccb_2tt_niDQQ&s" alt="">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOWFNhfEXV1Lfnc2V19nBPsccb_2tt_niDQQ&s" alt="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOWFNhfEXV1Lfnc2V19nBPsccb_2tt_niDQQ&s">
 <p>Майкл Гоф — Альфред Пенніуорт</p>
-<img src="https://www.kino-teatr.ru/acter/album/57287/1594722.jpg" alt="">
+<img src="https://www.kino-teatr.ru/acter/album/57287/1594722.jpg" alt="https://www.kino-teatr.ru/acter/album/57287/1594722.jpg">
 <p>Пет Гінгл — комісар Джеймс Гордон</p>
-<img src="https://tse3.mm.bing.net/th/id/OIP.mhu4SzuT-ZsCxhyHVrA56wHaEK?w=474&h=379&c=7&p=0" alt="">
+<img src="https://tse3.mm.bing.net/th/id/OIP.mhu4SzuT-ZsCxhyHVrA56wHaEK?w=474&h=379&c=7&p=0" alt="https://tse3.mm.bing.net/th/id/OIP.mhu4SzuT-ZsCxhyHVrA56wHaEK?w=474&h=379&c=7&p=0">
 <p>Біллі Ді Вільямс — Гарві Дент</p>
-<img src="https://s9.vcdn.biz/static/f/2317708791/image.jpg" alt="">
+<img src="https://s9.vcdn.biz/static/f/2317708791/image.jpg" alt="https://s9.vcdn.biz/static/f/2317708791/image.jpg">
 <p>Джек Паланс — Карл Гріссом</p>
-<img src="https://tse4.mm.bing.net/th/id/OIP.TCqbSGrQgznA-JQh1yBfkQHaJO?w=474&h=379&c=7&p=0" alt="">
+<img src="https://tse4.mm.bing.net/th/id/OIP.TCqbSGrQgznA-JQh1yBfkQHaJO?w=474&h=379&c=7&p=0" alt="https://tse4.mm.bing.net/th/id/OIP.TCqbSGrQgznA-JQh1yBfkQHaJO?w=474&h=379&c=7&p=0">
 <p>Джеррі Голл — Алісія Гант</p>
-<img src="https://tse2.mm.bing.net/th/id/OIP.QJ8h0yMgR4xrso_5SxzkxwHaLE?w=474&h=379&c=7&p=0" alt="">
+<img src="https://tse2.mm.bing.net/th/id/OIP.QJ8h0yMgR4xrso_5SxzkxwHaLE?w=474&h=379&c=7&p=0" alt="https://tse2.mm.bing.net/th/id/OIP.QJ8h0yMgR4xrso_5SxzkxwHaLE?w=474&h=379&c=7&p=0">
 </body>
 </html>
